[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assests/Sprite/volume_back.png" type="Texture" id=1]
[ext_resource path="res://GameComponents/AduioPanel.gd" type="Script" id=2]
[ext_resource path="res://Assests/Fonts/FiraCode-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assests/Sprite/volume_progress_bar_base.png" type="Texture" id=4]
[ext_resource path="res://Assests/Sprite/volume_progress_bar_over.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1140, 544 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "panel_in"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.138696, 5.46416 ),
"update": 0,
"values": [ Vector2( 1140, 544 ), Vector2( 912, 544 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1140, 544 )
texture = ExtResource( 1 )

[node name="Container" type="Node2D" parent="Sprite"]
position = Vector2( -1140, -544 )

[node name="Music" type="Label" parent="Sprite/Container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1050.0
margin_top = 525.0
margin_right = 1098.0
margin_bottom = 539.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Music: 80"

[node name="Effects" type="Label" parent="Sprite/Container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1050.0
margin_top = 556.0
margin_right = 1098.0
margin_bottom = 570.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Effects: 100"

[node name="Master" type="Label" parent="Sprite/Container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1050.0
margin_top = 494.0
margin_right = 1098.0
margin_bottom = 508.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Master: 100"

[node name="MasterProgress" type="TextureProgress" parent="Sprite/Container"]
margin_left = 1049.0
margin_top = 508.0
margin_right = 1233.0
margin_bottom = 521.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="MusicProgress" type="TextureProgress" parent="Sprite/Container"]
margin_left = 1049.0
margin_top = 540.0
margin_right = 1233.0
margin_bottom = 553.0
value = 80.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="EffectsProgress" type="TextureProgress" parent="Sprite/Container"]
margin_left = 1049.0
margin_top = 570.0
margin_right = 1233.0
margin_bottom = 583.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/panel_in = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="mouse_entered" from="Sprite/Container/MasterProgress" to="." method="_on_MasterProgress_mouse_entered"]
[connection signal="mouse_entered" from="Sprite/Container/MusicProgress" to="." method="_on_MusicProgress_mouse_entered"]
[connection signal="mouse_entered" from="Sprite/Container/EffectsProgress" to="." method="_on_EffectsProgress_mouse_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
